<resources>
    <string name="app_name">Esca</string>
    <string name="recipes">Recipes</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="random_number">59</string>
    <string name="text_home">Food Feed</string>
    <string name="text_search">Discover</string>
    <string name="text_cook">Cook</string>
    <string name="text_prefix_cook">Cook</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_profile">Profile</string>
    <string name="network_status_connected">Connected</string>
    <string name="network_status_connecting">Connecting</string>
    <string name="network_status_not_connected">Not connected</string>
    <string name="cook_default_name">Gordon</string>
    <string name="recipe">Recipe</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="recipe_title_hint">Recipe title</string>
    <string name="recipe_ingredients_hint">Ingredients</string>
    <string name="recipe_instructions_hint">Instructions</string>
    <string name="recipe_prep_time_hint">Time</string>
    <string name="recipe_prep_cost_hint">Cost</string>
    <string name="difficulty_level">Difficulty</string>
    <string-array name="difficulty_rating_array">
        <item>Difficulty Level</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="add_recipe_button_text">Add Recipe</string>
    <string name="add_image_button_text">Add Image</string>
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="cooked_by">Cooked By</string>
</resources>


