<?xml version="1.0" encoding="utf-8"?>
<android.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/white"
    app:title="@string/app_name"
    android:elevation="4dp"
    android:titleTextColor="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile_photo_cook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="start|center"
            android:text="@string/text_prefix_cook"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cook_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="start|center"
            android:text="@string/cook_default_name"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:padding="6dp"
            android:src="@drawable/icon_cooking" />

    </LinearLayout>

</android.widget.Toolbar>